--- a/app/src/main/res/layout/fragment_start.xml
+++ b/app/src/main/res/layout/fragment_start.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:gravity="bottom"
     android:orientation="vertical"
-    tools:context=".StartFragment">
+    tools:context=".fragments.StartFragment">
     <ImageView
         android:layout_width="150dp"
         android:layout_height="150dp"
