--- a/app/src/main/res/layout/fragment_baby_status.xml
+++ b/app/src/main/res/layout/fragment_baby_status.xml
@@ -6,7 +6,7 @@
     android:layoutDirection="rtl"
     android:padding="10dp"
     android:orientation="vertical"
-    tools:context=".BabyStatusFragment">
+    tools:context=".fragments.BabyStatusFragment">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
