--- a/app/src/main/res/layout/fragment_profile_content.xml
+++ b/app/src/main/res/layout/fragment_profile_content.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".ProfileFragment">
+    tools:context=".fragments.ProfileFragment">
   <FrameLayout
       android:id="@+id/fragment1"
       android:layout_width="match_parent"
