--- a/app/src/main/res/layout/fragment_selected_name.xml
+++ b/app/src/main/res/layout/fragment_selected_name.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layoutDirection="rtl"
-    tools:context=".StatusFragment">
+    tools:context=".fragments.StatusFragment">
 
     <com.google.android.material.appbar.MaterialToolbar
         android:layout_width="match_parent"
